# dragon-cave-helper

./: .gitignore  README.md  database.json  pyproject.toml
data/: dragon_db.json  dragon_details.json  dragon_details_plus.json  dragon_list.en.json  dragon_list.zh.json  rarity.json
dragon_info/: run.py  utils.py  web_spider.py
sprite/: README.md
web_spider/: get_dragon_data.py
