[tool.poetry]
name = "dragon-cave-helper"
version = "0.1.0"
description = ""
authors = ["lackbfun <git@lackb.fun>"]
packages = [
    { include = "web_spider" },
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.0"
bs4 = "^0.0.1"
zhconv = "^1.4.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
start = "web_spider.get_dragon_data:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
