[tool.poetry]
name = "dragon-cave-helper"
version = "0.1.0"
description = ""
authors = ["lackbfun <git@lackb.fun>"]
packages = [
    { include = "dragon_info" },
]

[tool.poetry.scripts]
start = "dragon_info.run:main"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.0"
bs4 = "^0.0.1"
zhconv = "^1.4.3"
lxml = "^4.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
